--- a/code.Rmd
+++ b/code.Rmd
@@ -24,11 +24,9 @@ options (width = 80)
 
 ```
 
-# ****
 
-###
 
-```{r 1, echo = TRUE}
+```{r 1, echo = FALSE}
 library(ggplot2)
 library(tidycensus)
 library(tmap)
@@ -54,6 +52,7 @@ asian_pal    <- colorRampPalette(c("#E3F2FD", "#0D47A1"))
 hisp_pal     <- colorRampPalette(c("#FFF3E0", "#E65100"))  
 white_pal    <- colorRampPalette(c("#F5F5F5", "#616161"))  
 
+# data
 racevars <- c(
   White      = "P005003",
   Black      = "P005004",
@@ -89,10 +88,12 @@ Wayne <- sf::st_transform(Wayne, 26917)
 
 
 # Base polygons
-plot(sf::st_geometry(Wayne),
-     col = "darkseagreen3", border = "darkseagreen4",
-     bg = "grey95", lwd = 0.5)
+#plot(sf::st_geometry(Wayne),
+#     col = "grey50", border = "grey35",
+#     bg = "grey95", lwd = 0.5)
+```
 
+```{r 2, echo = FALSE}
 
 # counting about population
 Wayne <- Wayne %>%
@@ -117,8 +118,9 @@ Wayne <- Wayne %>%
   )
 
 
+# map for ethnic share
+par(mfrow = c(2, 2), mar = c(0.5,0.5,0.5,0.5))
 
-# map for ethnic
 # white
 cartography::choroLayer(
   x = Wayne,
@@ -127,17 +129,16 @@ cartography::choroLayer(
   nclass = 5,
   col = white_pal(5),
   breaks = brks,
-  legend.title.txt = "‰ of County's White Population",
-  legend.pos = "bottomright",
-  legend.values.rnd = 2,
-  border = "grey70"
-)
-cartography::layoutLayer(
-  title = "Spatial Distribution of White Population (Proportion)",
-  author = "Jincheng Yao",
-  sources = "US Census 2010"
-)
-cartography::north(pos = "topleft")
+  border = "grey70")
+
+mtext("White",
+      side = 3,
+      line = -5.5,
+      adj = 0.78,
+      font = 2,
+      cex = 1.1,
+      col = "#616161")
+
 
 # black
 cartography::choroLayer(
@@ -147,17 +148,15 @@ cartography::choroLayer(
   nclass = 5,
   col = black_pal(5),
   breaks = brks,
-  legend.title.txt = "‰ of County's Black Population",
-  legend.pos = "bottomright",
-  legend.values.rnd = 2,
-  border = "grey70"
+  border = "grey70",
 )
-cartography::layoutLayer(
-  title = "Spatial Distribution of Black Population (Proportion)",
-  author = "Jincheng Yao",
-  sources = "US Census 2010"
-)
-cartography::north(pos = "topleft")
+mtext("Black",
+      side = 3,
+      line = -5.5,
+      adj = 0.78,
+      font = 2,
+      cex = 1.1,
+      col = "#4B0082")
 
 # asian
 cartography::choroLayer(
@@ -167,17 +166,15 @@ cartography::choroLayer(
   nclass = 5,
   col = asian_pal(5),
   breaks = brks,
-  legend.title.txt = "‰ of County's Asian Population",
-  legend.pos = "bottomright",
-  legend.values.rnd = 2,
   border = "grey70"
 )
-cartography::layoutLayer(
-  title = "Spatial Distribution of Asian Population (Proportion)",
-  author = "Jincheng Yao",
-  sources = "US Census 2010"
-)
-cartography::north(pos = "topleft")
+mtext("Asian",
+      side = 3,
+      line = -5.5,
+      adj = 0.78,
+      font = 2,
+      cex = 1.1,
+      col = "#0D47A1")
 
 # hispanic
 cartography::choroLayer(
@@ -187,17 +184,27 @@ cartography::choroLayer(
   nclass = 5,
   col = hisp_pal(5),
   breaks = brks,
-  legend.title.txt = "‰ of County's Hispanic Population",
-  legend.pos = "bottomright",
-  legend.values.rnd = 2,
   border = "grey70"
 )
+mtext("Hispanic",
+      side = 3,
+      line = -5.5,
+      adj = 0.82,
+      font = 2,
+      cex = 1.1,
+      col = "#E65100")
+
+par(mfrow=c(1,1))
+
+# global legend
 cartography::layoutLayer(
-  title = "Spatial Distribution of Hispanic Population (Proportion)",
+  title = "Ethnic Group Population Share in Wayne County (2010)",
   author = "Jincheng Yao",
-  sources = "US Census 2010"
+  sources = "US Census 2010",
+  north = FALSE # turn off default north arrow
 )
-cartography::north(pos = "topleft")
+cartography::north(pos = "topright")
+
 
 ```
 
