--- a/code.Rmd
+++ b/code.Rmd
@@ -45,7 +45,6 @@ library(potential)
 # general setting
 census_api_key("2495886b30a9eed86c09bc346d16b8febef89ddc")
 
-brks <- c(0, 0.1, 0.5, 1, 2, 5)
 
 black_pal    <- colorRampPalette(c("#F2E5FF", "#4B0082"))  
 asian_pal    <- colorRampPalette(c("#E3F2FD", "#0D47A1"))  
@@ -68,14 +67,14 @@ Wayne <- tidycensus::get_decennial(
   state       = "MI",
   county      = "Wayne",
   year        = 2010,
-  sumfile     = "sf1",      # explicit, though this is the default for 2010
+  sumfile     = "sf1",      
   geometry    = TRUE,
   summary_var = "P001001"   # total population
 )
 
 Wayne <- Wayne %>%
   tidyr::pivot_wider(
-    names_from  = variable,   # Asian, Black, Hispanic, White, etc.
+    names_from  = variable,   
     values_from = value,
     values_fill = 0           # fill missing group counts with 0
   ) 
@@ -83,19 +82,15 @@ Wayne <- Wayne %>%
 names(Wayne)[names(Wayne) == "summary_value"] <- "Pop2010"
 
 
-# Example: project Wayne County data to NAD83 / UTM zone 17N
+# project Wayne County data to NAD83 / UTM zone 17N
 Wayne <- sf::st_transform(Wayne, 26917)
 
 
-# Base polygons
-#plot(sf::st_geometry(Wayne),
-#     col = "grey50", border = "grey35",
-#     bg = "grey95", lwd = 0.5)
 ```
 
-```{r 2, echo = FALSE}
+```{r 2, echo = TRUE}
 
-# counting about population
+# index about population
 Wayne <- Wayne %>%
   mutate(
     #counting the share
@@ -116,26 +111,32 @@ Wayne <- Wayne %>%
     Asian_LQ    = (Asian    / Pop2010) / (sum(Asian)    / sum(Pop2010)),
     Hispanic_LQ = (Hispanic / Pop2010) / (sum(Hispanic) / sum(Pop2010))
   )
+```
 
 
-# map for ethnic share
+
+```{r 3, echo = TRUE}
+#breaks for proportion
+brks_Pop <- c(0, 0.1, 0.5, 1, 2, 5)
+
+# map for ethnic proportion
 par(mfrow = c(2, 2), mar = c(0,0.5,0.5,0),oma = c(0,1,1.5,0))
 
 # white
 cartography::choroLayer(
   x = Wayne,
   var = "WhiteProportion",
-  method = "quantile",
+  #method = "quantile",
   nclass = 5,
   col = white_pal(5),
-  breaks = brks,
+  breaks = brks_Pop,
   border = "grey70",
   
   legend.pos = "bottomright",
   legend.title.txt = "",
   legend.values.rnd = 2)
 
-mtext("White\nProportion ‰",
+mtext("White\nProportion(‰)",
       side = 3,
       line = -8.5,
       adj = 0.95,
@@ -148,16 +149,16 @@ mtext("White\nProportion ‰",
 cartography::choroLayer(
   x = Wayne,
   var = "BlackProportion",
-  method = "quantile",
+  #method = "quantile",
   nclass = 5,
   col = black_pal(5),
-  breaks = brks,
+  breaks = brks_Pop,
   border = "grey70",
   
   legend.pos = "bottomright",
   legend.title.txt = "",
   legend.values.rnd = 2)
-mtext("Black\nProportion ‰",
+mtext("Black\nProportion(‰)",
       side = 3,
       line = -8.5,
       adj = 0.95,
@@ -169,16 +170,16 @@ mtext("Black\nProportion ‰",
 cartography::choroLayer(
   x = Wayne,
   var = "AsianProportion",
-  method = "quantile",
+  #method = "quantile",
   nclass = 5,
   col = asian_pal(5),
-  breaks = brks,
+  breaks = brks_Pop,
   border = "grey70",
   
   legend.pos = "bottomright",
   legend.title.txt = "",
   legend.values.rnd = 2)
-mtext("Asian\nProportion ‰",
+mtext("Asian\nProportion(‰)",
       side = 3,
       line = -8.5,
       adj = 0.95,
@@ -190,13 +191,13 @@ mtext("Asian\nProportion ‰",
 cartography::choroLayer(
   x = Wayne,
   var = "HispanicProportion",
-  method = "quantile",
+  #method = "quantile",
   nclass = 5,
   col = hisp_pal(5),
-  breaks = brks,
+  breaks = brks_Pop,
   border = "grey70",
-  legend.pos = "bottomright",
   
+  legend.pos = "bottomright",
   legend.title.txt = "",
   legend.values.rnd = 2
 )
@@ -228,7 +229,7 @@ x2 <- bb["xmax"] + 0.1 * (bb["xmax"] - bb["xmin"])
 y1 <- bb["ymax"] - 0.05 * (bb["ymax"] - bb["ymin"])
 y2 <- bb["ymax"] - 0.13 * (bb["ymax"] - bb["ymin"])
 cartography::north(pos = c(x1, y1))
-cartography::barscale(pos = c(x, y2),  unit = "km")
+cartography::barscale(pos = c(x2, y2),  unit = "km")
 
 
 mtext("Ethnic Group Population Share in Wayne County (2010)",
@@ -241,3 +242,133 @@ mtext("Ethnic Group Population Share in Wayne County (2010)",
 
 ```
 
+
+
+
+```{r 4, echo = TRUE}
+#breaks for LQ
+max_LQ <- max(Wayne$White_LQ, Wayne$Black_LQ, Wayne$Asian_LQ, Wayne$Hispanic_LQ, na.rm = TRUE)
+brks_LQ <- c(0, 0.5, 1, 2, 20)
+
+# map for ethnic Location Quotient (LQ)
+par(mfrow = c(2, 2), mar = c(0,0.5,0.5,0),oma = c(0,1,1.5,0))
+
+# white
+cartography::choroLayer(
+  x = Wayne,
+  var = "White_LQ",
+  #method = "quantile",
+  nclass = 5,
+  col = white_pal(5),
+  breaks = brks_LQ,
+  border = "grey70",
+  
+  legend.pos = "bottomright",
+  legend.title.txt = "",
+  legend.values.rnd = 2)
+
+mtext("White\nLQ",
+      side = 3,
+      line = -8.5,
+      adj = 0.95,
+      font = 2,
+      cex = 1.1,
+      col = "#616161")
+
+
+# black
+cartography::choroLayer(
+  x = Wayne,
+  var = "Black_LQ",
+  #method = "quantile",
+  nclass = 5,
+  col = black_pal(5),
+  breaks = brks_LQ,
+  border = "grey70",
+  
+  legend.pos = "bottomright",
+  legend.title.txt = "",
+  legend.values.rnd = 2)
+mtext("Black\nLQ",
+      side = 3,
+      line = -8.5,
+      adj = 0.95,
+      font = 2,
+      cex = 1.1,
+      col = "#4B0082")
+
+# asian
+cartography::choroLayer(
+  x = Wayne,
+  var = "Asian_LQ",
+  #method = "quantile",
+  nclass = 5,
+  col = asian_pal(5),
+  breaks = brks_LQ,
+  border = "grey70",
+  
+  legend.pos = "bottomright",
+  legend.title.txt = "",
+  legend.values.rnd = 2)
+mtext("Asian\nLQ",
+      side = 3,
+      line = -8.5,
+      adj = 0.95,
+      font = 2,
+      cex = 1.1,
+      col = "#0D47A1")
+
+# hispanic
+cartography::choroLayer(
+  x = Wayne,
+  var = "Hispanic_LQ",
+  #method = "quantile",
+  nclass = 5,
+  col = hisp_pal(5),
+  breaks = brks_LQ,
+  border = "grey70",
+  legend.pos = "bottomright",
+  
+  legend.title.txt = "",
+  legend.values.rnd = 2
+)
+
+mtext("Hispanic\nLQ",
+      side = 3,
+      line = -8.5,
+      adj = 0.95,
+      font = 2,
+      cex = 1.1,
+      col = "#E65100")
+
+
+par(mfrow=c(1,1))
+
+# global legend
+cartography::layoutLayer(
+  title = "",
+  author = "Jincheng Yao",
+  sources = "US Census 2010",
+  north = FALSE,
+  scale = FALSE,
+  frame = FALSE
+)
+
+bb <- sf::st_bbox(Wayne)
+x1 <- bb["xmax"] + 0.16 * (bb["xmax"] - bb["xmin"])
+x2 <- bb["xmax"] + 0.1 * (bb["xmax"] - bb["xmin"])
+y1 <- bb["ymax"] - 0.05 * (bb["ymax"] - bb["ymin"])
+y2 <- bb["ymax"] - 0.13 * (bb["ymax"] - bb["ymin"])
+cartography::north(pos = c(x1, y1))
+cartography::barscale(pos = c(x2, y2),  unit = "km")
+
+
+mtext("Ethnic Group Population Share in Wayne County (2010)",
+      side = 3, 
+      outer = TRUE, 
+      line = -0.2, 
+      cex = 1.6, 
+      font = 2)
+
+
+```
